<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="30dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="30dp"
            android:layout_gravity="center">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_weight=".2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:text="@string/table_0_0"
                    android:gravity="center"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="#c5c5c5" />

                <TextView
                    android:layout_weight=".3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:gravity="center"
                    android:text="@string/table_0_1"
                    android:layout_marginRight="4dp"
                    android:background="#c5c5c5" />

                <TextView
                    android:layout_weight=".5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:gravity="center"
                    android:text="@string/table_0_2"
                    android:layout_marginRight="4dp"
                    android:background="#c5c5c5" />

            </TableRow>

            <TableRow
                android:paddingTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_weight=".2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:text="@string/table_1_0"
                    android:gravity="center"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="#E1E1E1" />

                <TextView
                    android:layout_weight=".3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:gravity="center"
                    android:text="@string/table_1_1"
                    android:layout_marginRight="4dp"
                    android:background="#E1E1E1" />

                <TextView
                    android:layout_weight=".5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:gravity="center"
                    android:text="@string/table_1_2"
                    android:layout_marginRight="4dp"
                    android:background="#E1E1E1" />

            </TableRow>

            <TableRow
                android:paddingTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_weight=".2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:text="@string/table_2_0"
                    android:gravity="center"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="#E1E1E1" />

                <TextView
                    android:layout_weight=".3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:gravity="center"
                    android:text="@string/table_2_1"
                    android:layout_marginRight="4dp"
                    android:background="#E1E1E1" />

                <TextView
                    android:layout_weight=".5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:gravity="center"
                    android:text="@string/table_2_2"
                    android:layout_marginRight="4dp"
                    android:background="#E1E1E1" />

            </TableRow>

            <TableRow
                android:paddingTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_weight=".2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:text="@string/table_3_0"
                    android:gravity="center"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="#E1E1E1" />

                <TextView
                    android:layout_weight=".3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:gravity="center"
                    android:text="@string/table_3_1"
                    android:layout_marginRight="4dp"
                    android:background="#E1E1E1" />

                <TextView
                    android:layout_weight=".5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:gravity="center"
                    android:text="@string/table_3_2"
                    android:layout_marginRight="4dp"
                    android:background="#E1E1E1" />

            </TableRow>

            <TableRow
                android:paddingTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_weight=".2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:text="@string/table_4_0"
                    android:gravity="center"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="#E1E1E1" />

                <TextView
                    android:layout_weight=".3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:gravity="center"
                    android:text="@string/table_4_1"
                    android:layout_marginRight="4dp"
                    android:background="#E1E1E1" />

                <TextView
                    android:layout_weight=".5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:gravity="center"
                    android:text="@string/table_4_2"
                    android:layout_marginRight="4dp"
                    android:background="#E1E1E1" />

            </TableRow>

            <TableRow
                android:paddingTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_weight=".2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:text="@string/table_5_0"
                    android:gravity="center"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="#E1E1E1" />

                <TextView
                    android:layout_weight=".3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:gravity="center"
                    android:text="@string/table_5_1"
                    android:layout_marginRight="4dp"
                    android:background="#E1E1E1" />

                <TextView
                    android:layout_weight=".5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:gravity="center"
                    android:text="@string/table_5_2"
                    android:layout_marginRight="4dp"
                    android:background="#E1E1E1" />

            </TableRow>

            <TableRow
                android:paddingTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_weight=".2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:text="@string/table_6_0"
                    android:gravity="center"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="#E1E1E1" />

                <TextView
                    android:layout_weight=".3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:gravity="center"
                    android:text="@string/table_6_1"
                    android:layout_marginRight="4dp"
                    android:background="#E1E1E1" />

                <TextView
                    android:layout_weight=".5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:gravity="center"
                    android:text="@string/table_6_2"
                    android:layout_marginRight="4dp"
                    android:background="#E1E1E1" />

            </TableRow>

            <TableRow
                android:paddingTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_weight=".2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:text="@string/table_7_0"
                    android:gravity="center"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="#E1E1E1" />

                <LinearLayout
                    android:layout_weight=".3"
                    android:layout_width="0dp"
                    android:orientation="vertical" android:layout_height="match_parent" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".63"
                        android:padding="4dp"
                        android:gravity="center"
                        android:text="@string/table_7_1_0"
                        android:layout_marginRight="4dp"
                        android:background="#E1E1E1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:padding="4dp"
                        android:layout_marginTop="4dp"
                        android:gravity="center"
                        android:text="@string/table_7_1_1"
                        android:layout_marginRight="4dp"
                        android:background="#E1E1E1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_weight=".5"
                    android:layout_width="0dp"
                    android:orientation="vertical" android:layout_height="match_parent" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:padding="8dp"
                        android:gravity="center"
                        android:text="@string/table_7_2_0"
                        android:layout_marginRight="4dp"
                        android:background="#E1E1E1" />

                    <TextView
                        android:layout_marginTop="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:padding="8dp"
                        android:gravity="center"
                        android:text="@string/table_7_2_1"
                        android:layout_marginRight="4dp"
                        android:background="#E1E1E1" />

                </LinearLayout>

            </TableRow>


        </TableLayout>
    </LinearLayout>
</ScrollView>
